Add favicon rel & add link in copyright

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
     <title>Toledo Web Professionals</title>
 
+   <link rel="icon" type="image/png" href="http://toledowebprofessionals.com/favicon.ico">
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
 
@@ -262,7 +263,7 @@
                             <a href="#contact">Contact Us</a>
                         </li>
                     </ul>
-                    <p class="copyright text-muted small">Copyright &copy; Toledo Web Professionals 2016. All Rights Reserved</p>
+                    <p class="copyright text-muted small">Copyright &copy; <a href="http://toledowebprofessionals.com/" target="_parent">Toledo Web Professionals</a> 2016. All Rights Reserved</p>
                 </div>
             </div>
         </div>
