Revise sponsor bullet points, paragraph edits -Add meetup svg icon to images -Revise link styles

--- a/index.html
+++ b/index.html
@@ -120,8 +120,8 @@
                     <ul class="benefits">
                         <li>Connect with Toledo's Web Community</li>
                         <li>Announce job openings</li>
-                        <li>Receive Social Media Promotion from TWP leading up and during the event</li>
-                        <li>We provide the event management</li>
+                        <li>Receive Social Media Promotion</li>
+                        <li>We deliver attendees and provide the event management</li>
                     </ul>
                     
                     <p class="lead">Join our growing list of premiere sponsors including Owens Corning, Root, Hanson, and MaritzCX.</p>
@@ -192,8 +192,8 @@
                     <div class="clearfix"></div>
                     <h2 class="section-heading">About TWP</h2>
                     <p class="lead">Toledo Web Professionals is a grassroots organization aimed at bringing professional development opportunities to Toledo, fostering an environment of collaboration and building a community of local web professionals.</p>
-                    <p class="lead">We facilitate at least one event per month and working with other tech groups to bring outstanding development opportunities to Toledo.</p>
-                    <p class="lead">TWP is completely volunteer organized and run. We do not charge any membership fees and our events are free to attend.  In order to help provide the best events possible we depend on sponsors to help us.</p>
+                    <p class="lead">We facilitate at least one event per month. Whether it is an event of our own invention or working with other tech groups, we bring outstanding tech talk opportunities to Toledo.</p>
+                    <p class="lead">TWP is completely volunteer organized and run. We do not charge any membership fees and our events are free to attend.  In order to provide the best events possible we depend on our <a href="#sponsors">sponsors</a>.</p>
 
 
                 </div>
