Fixed links/anchors to direct to relative/https.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <title>Toledo Web Professionals</title>
 
-   <link rel="icon" type="image/png" href="http://toledowebprofessionals.com/favicon.ico">
+   <link rel="icon" type="image/png" href="/favicon.ico">
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
 
@@ -170,7 +170,7 @@
                 </div>
                 <div class="col-lg-5 col-sm-pull-6  col-sm-6">
                     <img class="img-responsive" src="img/googz.jpg" alt="Rita DeRaedt: Design at the Googz">
-                    <figcaption class="figure"><a href="http://www.meetup.com/Toledo-Web-Professionals/events/220390332/" target="_blank" class="talk">Design at the Googz</a>, March 2015 talk by Rita DeRaedt about her internship with Google. Space provided by Seed Coworking and refreshments by GroundSpeed.</figcaption>
+                    <figcaption class="figure"><a href="https://www.meetup.com/Toledo-Web-Professionals/events/220390332/" target="_blank" class="talk">Design at the Googz</a>, March 2015 talk by Rita DeRaedt about her internship with Google. Space provided by Seed Coworking and refreshments by GroundSpeed.</figcaption>
                 </div>
 
             </div>
@@ -199,7 +199,7 @@
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
                     <img class="img-responsive" src="img/security.jpg" alt="Michael Hess: Security: Tales from the Field">
-                    <figcaption class="figure"><a href="http://www.meetup.com/Toledo-Web-Professionals/events/222335600/" target="_blank" class="talk">Security: Tales from the Field</a>, June 2015 talk by Michael Hess, Drupal Security Team Lead. Premiere Sponsorship provided by Hanson Inc.</figcaption>
+                    <figcaption class="figure"><a href="https://www.meetup.com/Toledo-Web-Professionals/events/222335600/" target="_blank" class="talk">Security: Tales from the Field</a>, June 2015 talk by Michael Hess, Drupal Security Team Lead. Premiere Sponsorship provided by Hanson Inc.</figcaption>
                 </div>
 
             </div>
