--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
+    <meta name="description" content="Toledo Web Professionals organizes free, open networking meetups on the second Wednesday of each month for web industry professionals. We welcome everyone from creatives and programmers to hobbyists and entrepreneurs of every skill level or education.">
     <meta name="author" content="">
 
     <title>Toledo Web Professionals</title>
