--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <title>Toledo Web Professionals</title>
 
-   <link rel="icon" type="image/png" href="/favicon.ico">
+    <link rel="icon" type="image/png" href="/favicon.ico">
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
 
@@ -33,7 +33,16 @@
 </head>
 
 <body>
+    <!-- Google Analytics -->
+    <script>
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
+        ga('create', 'UA-75850132-1', 'auto');
+        ga('send', 'pageview');
+    </script>
     <!-- Navigation -->
     <nav class="navbar navbar-default navbar-fixed-top topnav" role="navigation">
         <div class="container topnav">
@@ -274,9 +283,7 @@
     </footer>
 
     <!-- jQuery -->
-
     <script src="js/min/jquery-min.js"></script>
-    
     <script src="js/min/main-min.js"></script>
 
     <!-- Bootstrap Core JavaScript -->
