--- a/index.html
+++ b/index.html
@@ -91,6 +91,12 @@
                         <h3>Toledo Web Professionals is a grassroots organization aimed at bringing professional development opportunities to Toledo, fostering an environment of collaboration and building a community of local web professionals.</h3>
                         <hr class="intro-divider">
                         <ul class="list-inline intro-social-buttons">
+                            <li class="meetup">
+                                <a href="https://www.facebook.com/toledowebprofessionals" class="btn btn-default btn-lg"><span class="network-name">Join us on <img src="img/icons/meetup-icon.png" alt="meetup icon" /></span></a>
+                            </li>
+                        </ul>
+                        <div class="text-center">and follow us on</div>
+                        <ul class="list-inline intro-social-buttons">
                             <li>
                                 <a href="https://twitter.com/twpmeetup" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
                             </li>
@@ -230,6 +236,11 @@
                 </div>
                 <div class="col-lg-12">
                    <hr class="intro-divider">
+                        <ul class="list-inline intro-social-buttons">
+                            <li class="meetup">
+                                <a href="https://www.facebook.com/toledowebprofessionals" class="btn btn-default btn-lg"><span class="network-name">Join us on <img src="img/icons/meetup-icon.png" alt="meetup icon" /></span></a>
+                            </li>
+                        </ul>
                     <ul class="list-inline intro-social-buttons">
                             <li>
                                 <a href="https://twitter.com/twpmeetup" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
