Preview alternate intro landing layout with Meetup button

--- a/index.html
+++ b/index.html
@@ -135,6 +135,11 @@
                         </ul>
                     </div>
                 </div>
+                <div class="col-lg-12">
+                    <p class="join"> Join us on&nbsp;
+                        <a href="http://www.meetup.com/Toledo-Web-Professionals/" target="_blank"><img src="img/meetup.svg" class="img-responsive meetup" alt="Join Us on http://www.meetup.com/Toledo-Web-Professionals/"></a>
+                    </p>
+                </div>
             </div>
 
         </div>
@@ -336,7 +341,7 @@
                
            </div>
            <div class="row">
-               <div class="col-md-offset-3 col-md-6">
+               <div class="col-lg-offset-3 col-lg-6">
                    <div class="legend">
                         <p><i class="fa fa-diamond"></i>&nbsp;Recognizing multiple sponsorships with the Toledo Web Professionals</p>
                    </div>
