Add meetup icon to site

--- a/index.html
+++ b/index.html
@@ -284,10 +284,14 @@
                                 <a href="https://www.linkedin.com/groups/Toledo-Web-Professionals-4874377" class="btn btn-default btn-lg" target="_blank"><i class="fa fa-linkedin fa-fw"></i> <span class="network-name">Linkedin</span></a>
                             </li>
                         </ul>
-
                 </div>
+                
             </div>
-
+<div class="col-lg-12">
+                    <p class="join"> Join us on&nbsp;
+                        <a href="http://www.meetup.com/Toledo-Web-Professionals/" target="_blank"><img src="img/meetup.svg" class="img-responsive meetup" alt="Join Us on http://www.meetup.com/Toledo-Web-Professionals/"></a>
+                    </p>
+                </div>
         </div>
         <!-- /.container -->
 
