--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                 </div>
                 <div class="col-lg-12">
                     <p class="join"> Join us on&nbsp;
-                        <a href="http://www.meetup.com/Toledo-Web-Professionals/" target="_blank"><img src="img/meetup.svg" class="img-responsive meetup" alt="Join Us on http://www.meetup.com/Toledo-Web-Professionals/"></a>
+                        <a href="http://www.meetup.com/Toledo-Web-Professionals/" target="_blank"><img src="img/meetup_sm.svg" class="img-responsive meetup" alt="Join Us on http://www.meetup.com/Toledo-Web-Professionals/"></a>
                     </p>
                 </div>
             </div>
@@ -289,7 +289,7 @@
             </div>
 <div class="col-lg-12">
                     <p class="join"> Join us on&nbsp;
-                        <a href="http://www.meetup.com/Toledo-Web-Professionals/" target="_blank"><img src="img/meetup.svg" class="img-responsive meetup" alt="Join Us on http://www.meetup.com/Toledo-Web-Professionals/"></a>
+                        <a href="http://www.meetup.com/Toledo-Web-Professionals/" target="_blank"><img src="img/meetup_sm.svg" class="img-responsive meetup" alt="Join Us on http://www.meetup.com/Toledo-Web-Professionals/"></a>
                     </p>
                 </div>
         </div>
