--- a/index.html
+++ b/index.html
@@ -56,10 +56,11 @@
     <!-- Remote CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
+    <link rel="stylesheet" href="https://cdn.snipcart.com/themes/2.0/base/snipcart.min.css" />
 
     <!-- Local CSS -->
-    <link rel="stylesheet"  href="/assets/css/twp.min.css" />
-    <link rel="stylesheet"  href="/assets/css/vendor.min.css" />
+    <link rel="stylesheet"  href="/assets/css/twp.min.css?rel=1508895229238" />
+    <link rel="stylesheet"  href="/assets/css/vendor.min.css?rel=1508895229237" />
 
   </head>
 
@@ -470,8 +471,9 @@
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js"></script>
-    <script src="/assets/js/vendor.min.js"></script>
-    <script src="/assets/js/twp.min.js"></script>
+    <script src="https://cdn.snipcart.com/scripts/2.0/snipcart.js" data-api-key="YOUR_API_KEY" id="snipcart"></script>
+    <script src="/assets/js/vendor.min.js?rel=1508895229466"></script>
+    <script src="/assets/js/twp.min.js?rel=1508895229467"></script>
   </body>
 
 </html>
