--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
     <link rel="stylesheet" href="https://cdn.snipcart.com/themes/2.0/base/snipcart.min.css" />
 
     <!-- Local CSS -->
-    <link rel="stylesheet"  href="/assets/css/twp.min.css?rel=1508895229238" />
-    <link rel="stylesheet"  href="/assets/css/vendor.min.css?rel=1508895229237" />
+    <link rel="stylesheet"  href="/assets/css/twp.min.css?rel=1508895468796" />
+    <link rel="stylesheet"  href="/assets/css/vendor.min.css?rel=1508895468795" />
 
   </head>
 
@@ -471,9 +471,9 @@
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js"></script>
-    <script src="https://cdn.snipcart.com/scripts/2.0/snipcart.js" data-api-key="YOUR_API_KEY" id="snipcart"></script>
-    <script src="/assets/js/vendor.min.js?rel=1508895229466"></script>
-    <script src="/assets/js/twp.min.js?rel=1508895229467"></script>
+    <script src="https://cdn.snipcart.com/scripts/2.0/snipcart.js" data-api-key="MWM5N2YyNDMtNzBmNS00ZGM1LWIzNjAtMzRkOGJjYzk2OGRkNjM2NDQ0OTE2NjY4MjkxNTY3" id="snipcart"></script>
+    <script src="/assets/js/vendor.min.js?rel=1508895468904"></script>
+    <script src="/assets/js/twp.min.js?rel=1508895468905"></script>
   </body>
 
 </html>
