Updated site with sponsor table, fixed issues on mobile.

--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
     <link rel="stylesheet" href="https://cdn.snipcart.com/themes/2.0/base/snipcart.min.css" />
 
     <!-- Local CSS -->
-    <link rel="stylesheet"  href="/assets/css/twp.min.css?rel=1508895468796" />
-    <link rel="stylesheet"  href="/assets/css/vendor.min.css?rel=1508895468795" />
+    <link rel="stylesheet"  href="/assets/css/twp.min.css" />
+    <link rel="stylesheet"  href="/assets/css/vendor.min.css" />
 
   </head>
 
@@ -107,7 +107,7 @@
       in Toledo.
     </h3>
     <a class="btn btn-light btn-lg btn-meetup" target="_blank" href="https://www.meetup.com/Toledo-Web-Professionals/">
-      Join & See Events on
+      Join & RSVP on
       <img class="btn-meetup-logo" src="/assets/img/logos/meetup.svg" alt="Meetup" />
     </a>
     <a class="btn btn-outline-light btn-lg" href="/become-a-sponsor/">Become a Sponsor</a>
@@ -147,7 +147,7 @@
 <div class="section-primary" id="about">
   <div class="container">
     <div class="row justify-content-between">
-      <div class="col-lg-5 col-sm-6">
+      <div class="col-lg-5 col-md-6">
         <h3 class="section-heading">We bring learners, professionals, and businesses together.</h3>
         <h6 class="text-secondary">Toledo is our Mission</h6>
         <p>
@@ -165,7 +165,7 @@
           order to provide the best events possible, we depend on our gracious <a href="#sponsors">sponsors</a>.
         </p>
       </div>
-      <figure class="col-lg-5 col-sm-6 image-frame">
+      <figure class="col-lg-5 col-md-6 image-frame">
         <a class="image-frame-image" target="_blank" href="/assets/img/meetups/googz.jpg">
           <img class="img-fluid" src="/assets/img/meetups/googz.jpg" alt="Rita DeRaedt: Design at the Googz" />
         </a>
@@ -397,7 +397,7 @@
 
     <div class="section-tertiary text-center contact-banner" id="contact">
       <a class="btn btn-light btn-lg btn-meetup" target="_blank" href="https://www.meetup.com/Toledo-Web-Professionals/">
-        Join & See Events on
+        Join & RSVP on
         <img class="btn-meetup-logo" src="/assets/img/logos/meetup.svg" alt="Meetup" />
       </a>
       <a class="btn btn-outline-light btn-lg" href="/become-a-sponsor/">Become a Sponsor</a>
@@ -472,8 +472,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js"></script>
     <script src="https://cdn.snipcart.com/scripts/2.0/snipcart.js" data-api-key="MWM5N2YyNDMtNzBmNS00ZGM1LWIzNjAtMzRkOGJjYzk2OGRkNjM2NDQ0OTE2NjY4MjkxNTY3" id="snipcart"></script>
-    <script src="/assets/js/vendor.min.js?rel=1508895468904"></script>
-    <script src="/assets/js/twp.min.js?rel=1508895468905"></script>
+    <script src="/assets/js/vendor.min.js"></script>
+    <script src="/assets/js/twp.min.js"></script>
   </body>
 
 </html>
