--- a/become-a-sponsor/index.html
+++ b/become-a-sponsor/index.html
@@ -89,18 +89,134 @@
       </div>
     </nav>
 
-<br />
-<br />
-<br />
-<br />
+<div class="page-header">
+  <div class="container">
+    <h1 class="page-header-heading text-center">
+      Become a Sponsor!
+    </h1>
+    <p class="page-header-introduction">
+      Interested in sponsoring? Select a plan below, or check out our
+      <a href="https://github.com/toledowebprofessionals/twp-resources/raw/master/documents/twp-sponsorship/twp-sponsorship.pdf">sponsorship brochure</a> for more details!
+    </p>
+  </div>
+</div>
 
-<div class="section-primary text-center">
-  <h1>Coming Soon!</h1>
+<div class="section-primary">
+  <div class="container">
+    <h2 class="text-center">Sponsorship Tiers</h2>
+    <br />
+    <br />
+    <ul class="pricing-table">
+      <li class="pricing-table-item">
+        <h3 class="pricing-title text-primary">
+          Starter
+        </h3>
+        <p class="pricing-price text-primary">
+          $25/mo*
+        </p>
+        <ul class="pricing-items">
+          <li class="pricing-item">
+            Logo, name, and link featured on our website.
+          </li>
+          <li class="pricing-item">
+            Logo, name, and link on our Meetup page.
+          </li>
+          <li class="pricing-item">
+            Logo and name on our introductory slideshow.
+          </li>
+        </ul>
+        <button class="btn btn-outline-primary snipcart-add-item" data-item-name="Starter" data-item-id="starter" data-item-price="25.00" data-item-url="/" data-item-payment-interval="Month" data-item-payment-interval-count="1" data-item-payment-trial="0">
+          Get Started
+        </button>
+      </li>
+      <li class="pricing-table-item">
+        <h3 class="pricing-title text-tertiary">
+          Premium
+          <strong class="pricing-limit pricing-limit-tertiary">Limit 5</strong>
+        </h3>
+        <p class="pricing-price text-tertiary">
+          $100/mo*
+        </p>
+        <ul class="pricing-items">
+          <li class="pricing-item">
+            Includes everything in our <strong class="text-primary">Starter</strong> package.
+          </li>
+          <li class="pricing-item">
+            Weekly mentions on our social media profiles.
+          </li>
+          <li class="pricing-item">
+            Personal mention at the start of each event.
+          </li>
+          <li class="pricing-item">
+            Priority logo/name placement on all materials.
+          </li>
+          <li class="pricing-item">
+            One job listing per month sent to our mailing list.
+          </li>
+        </ul>
+        <button class="btn btn-outline-tertiary snipcart-add-item" data-item-name="Premium" data-item-id="premium" data-item-price="100.00" data-item-url="/" data-item-payment-interval="Month" data-item-payment-interval-count="1" data-item-payment-trial="0">
+          Get Started
+        </button>
+      </li>
+      <li class="pricing-table-item">
+        <h3 class="pricing-title text-secondary">
+          Premier
+          <strong class="pricing-limit pricing-limit-secondary">Limit 2</strong>
+        </h3>
+        <p class="pricing-price text-secondary">
+          $250/mo*
+        </p>
+        <ul class="pricing-items">
+          <li class="pricing-item">
+            Includes everything in our <strong class="text-tertiary">Premium</strong> package.
+          </li>
+          <li class="pricing-item">
+            Top logo/name placement on all materials.
+          </li>
+          <li class="pricing-item">
+            Ten minutes of speaking time at the start of each event, every month.
+          </li>
+          <li class="pricing-item">
+            One job listing per week sent to our mailing list.
+          </li>
+        </ul>
+        <button class="btn btn-outline-secondary snipcart-add-item" data-item-name="Premier" data-item-id="premier" data-item-price="250.00" data-item-url="/" data-item-payment-interval="Month" data-item-payment-interval-count="1" data-item-payment-trial="0">
+          Get Started
+        </button>
+      </li>
+    </ul>
+    <div class="row justify-content-between">
+      <div class="col-lg-5 col-sm-6">
+        <h5 class="text-primary">
+          Toledo Web Professionals by the Numbers
+        </h5>
+        <ul>
+          <li>Founded in October, 2011</li>
+          <li>80+ events held over six years.</li>
+          <li>600+ registered members on Meetup.com</li>
+          <li>Average of 25+ attendees at each monthly event</li>
+          <li>600+ followers on Twitter</li>
+          <li>Social media reach of 1,000+ monthly impressions</li>
+          <li>Mailing list reach of 600+ individuals</li>
+        </ul>
+      </div>
+      <div class="col-lg-5 col-sm-6">
+        <h5 class="text-primary">
+          Questions? Need Help Deciding?
+        </h5>
+        <p>
+          Email us online at <a href="mailto:twpmeetup@gmail.com">twpmeetup@gmail.com</a> and a member
+          of our leadership team will help customize your sponsorship experience. We can’t wait to connect you to
+          Toledo’s premier technology community!
+        </p>
+      </div>
+    </div>
+  </div>
 </div>
 
     <div class="section-tertiary text-center contact-banner" id="contact">
       <a class="btn btn-light btn-lg btn-meetup" target="_blank" href="https://www.meetup.com/Toledo-Web-Professionals/">
-        Join & See Events on
+        Join & RSVP on
         <img class="btn-meetup-logo" src="/assets/img/logos/meetup.svg" alt="Meetup" />
       </a>
       <a class="btn btn-outline-light btn-lg" href="/become-a-sponsor/">Become a Sponsor</a>
