--- a/become-a-sponsor/index.html
+++ b/become-a-sponsor/index.html
@@ -125,7 +125,7 @@
             Logo and name on our introductory slideshow.
           </li>
         </ul>
-        <button class="btn btn-outline-primary snipcart-add-item" data-item-name="Starter" data-item-id="starter" data-item-price="25.00" data-item-url="/" data-item-payment-interval="Month" data-item-payment-interval-count="1" data-item-payment-trial="0">
+        <button class="btn btn-outline-primary snipcart-add-item" data-item-name="Starter" data-item-id="starter" data-item-price="25.00" data-item-url="/become-a-sponsor/" data-item-payment-interval="Month" data-item-payment-interval-count="1" data-item-payment-trial="0">
           Get Started
         </button>
       </li>
@@ -154,7 +154,7 @@
             One job listing per month sent to our mailing list.
           </li>
         </ul>
-        <button class="btn btn-outline-tertiary snipcart-add-item" data-item-name="Premium" data-item-id="premium" data-item-price="100.00" data-item-url="/" data-item-payment-interval="Month" data-item-payment-interval-count="1" data-item-payment-trial="0">
+        <button class="btn btn-outline-tertiary snipcart-add-item" data-item-name="Premium" data-item-id="premium" data-item-price="100.00" data-item-url="/become-a-sponsor/" data-item-payment-interval="Month" data-item-payment-interval-count="1" data-item-payment-trial="0">
           Get Started
         </button>
       </li>
@@ -180,7 +180,7 @@
             One job listing per week sent to our mailing list.
           </li>
         </ul>
-        <button class="btn btn-outline-secondary snipcart-add-item" data-item-name="Premier" data-item-id="premier" data-item-price="250.00" data-item-url="/" data-item-payment-interval="Month" data-item-payment-interval-count="1" data-item-payment-trial="0">
+        <button class="btn btn-outline-secondary snipcart-add-item" data-item-name="Premier" data-item-id="premier" data-item-price="250.00" data-item-url="/become-a-sponsor/" data-item-payment-interval="Month" data-item-payment-interval-count="1" data-item-payment-trial="0">
           Get Started
         </button>
       </li>
