--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
     <link rel="stylesheet" href="https://cdn.snipcart.com/themes/2.0/base/snipcart.min.css" />
 
     <!-- Local CSS -->
-    <link rel="stylesheet"  href="/assets/css/twp.min.css?rel=1508982473570" />
-    <link rel="stylesheet"  href="/assets/css/vendor.min.css?rel=1508982473569" />
+    <link rel="stylesheet"  href="/assets/css/twp.min.css" />
+    <link rel="stylesheet"  href="/assets/css/vendor.min.css" />
 
   </head>
 
@@ -471,7 +471,7 @@
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js"></script>
-    <script src="https://cdn.snipcart.com/scripts/2.0/snipcart.js" data-api-key="MWM5N2YyNDMtNzBmNS00ZGM1LWIzNjAtMzRkOGJjYzk2OGRkNjM2NDQ0OTE2NjY4MjkxNTY3" id="snipcart"></script>
+    <script src="https://cdn.snipcart.com/scripts/2.0/snipcart.js" data-api-key="MmMyZGM1NjUtZDYzZC00Zjg1LTg2ZGUtYTk0OTRiNDVlMzZiNjM2NDQ0OTE2NjY4MjkxNTY3" id="snipcart"></script>
     <script src="/assets/js/vendor.min.js"></script>
     <script src="/assets/js/twp.min.js"></script>
   </body>
