Updated sponsor page with asterisk and new Spincart styles.

--- a/become-a-sponsor/index.html
+++ b/become-a-sponsor/index.html
@@ -206,6 +206,9 @@
         </button>
       </li>
     </ul>
+    <p class="pricing-asterisk">
+      All sponsorship dollars contribute to our monthly event and operating costs. Cancel anytime. Funds administered by <a href="http://techtoledo.com/">Tech Toledo</a>.
+    </p>
     <div class="row justify-content-between">
       <div class="col-lg-5 col-sm-6">
         <h5 class="text-primary">
