--- a/become-a-sponsor/index.html
+++ b/become-a-sponsor/index.html
@@ -236,7 +236,7 @@
 </div>
 
 <div class="section-tertiary text-center contact-banner" id="contact">
-  <a class="btn btn-light btn-lg btn-meetup" target="_blank" href="">
+  <a class="btn btn-light btn-lg btn-meetup" target="_blank" href="https://www.meetup.com/Toledo-Web-Professionals/">
     Join & RSVP on
     <img class="btn-meetup-logo" src="/assets/img/logos/meetup.svg" alt="Meetup" />
   </a>
