--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
     <link rel="stylesheet" href="https://cdn.snipcart.com/themes/2.0/base/snipcart.min.css" />
 
     <!-- Local CSS -->
-    <link rel="stylesheet"  href="/assets/css/twp.min.css?rel=1510003241998" />
-    <link rel="stylesheet"  href="/assets/css/vendor.min.css?rel=1510003241997" />
+    <link rel="stylesheet"  href="/assets/css/twp.min.css" />
+    <link rel="stylesheet"  href="/assets/css/vendor.min.css" />
 
   </head>
   <body>
@@ -103,7 +103,7 @@
       fostering an environment of collaboration, and building a community of technical, design, and business talent
       in Toledo.
     </h3>
-    <a class="btn btn-light btn-lg btn-meetup" target="_blank" href="">
+    <a class="btn btn-light btn-lg btn-meetup" target="_blank" href="https://www.meetup.com/Toledo-Web-Professionals/">
       Join & RSVP on
       <img class="btn-meetup-logo" src="/assets/img/logos/meetup.svg" alt="Meetup" />
     </a>
@@ -411,7 +411,7 @@
 </div>
 
 <div class="section-tertiary text-center contact-banner" id="contact">
-  <a class="btn btn-light btn-lg btn-meetup" target="_blank" href="">
+  <a class="btn btn-light btn-lg btn-meetup" target="_blank" href="https://www.meetup.com/Toledo-Web-Professionals/">
     Join & RSVP on
     <img class="btn-meetup-logo" src="/assets/img/logos/meetup.svg" alt="Meetup" />
   </a>
@@ -497,7 +497,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js"></script>
     <script src="https://cdn.snipcart.com/scripts/2.0/snipcart.js" data-api-key="MmMyZGM1NjUtZDYzZC00Zjg1LTg2ZGUtYTk0OTRiNDVlMzZiNjM2NDQ0OTE2NjY4MjkxNTY3" id="snipcart"></script>
-    <script src="/assets/js/vendor.min.js?rel=1510003242150"></script>
-    <script src="/assets/js/twp.min.js?rel=1510003242150"></script>
+    <script src="/assets/js/vendor.min.js"></script>
+    <script src="/assets/js/twp.min.js"></script>
   </body>
 </html>
