Added Spoke and Seed as sponsors.

--- a/index.html
+++ b/index.html
@@ -403,10 +403,21 @@
       Our Sponsors
     </h3>
     <p class="section-introduction">
-      Be the first! We're just beginning our sponsorship drive. Interested? See our
+      Without our generous sponsors, we couldn't create these amazing events every month. Interested in sponsoring? See our
       <a href="https://github.com/toledowebprofessionals/twp-resources/raw/master/documents/twp-sponsorship/twp-sponsorship.pdf">sponsorship brochure</a> for details!
     </p>
-    <a class="btn btn-outline-primary" href="/become-a-sponsor/">Become a Sponsor</a>
+    <p>
+      <a class="btn btn-outline-primary" href="/become-a-sponsor/">Become a Sponsor</a>
+    </p>
+    <br />
+    <div class="sponsor-list">
+      <a class="sponsor-list-item" href="http://www.spokehq.com/">
+        <img src="/assets/img/logos/spoke.svg" width="180" alt="Spoke HQ" />
+      </a>
+      <a class="sponsor-list-item" href="http://www.seedcoworking.com/">
+        <img src="/assets/img/logos/seed-coworking.svg" width="130" alt="Seed Coworking" />
+      </a>
+    </div>
   </div>
 </div>
 
