Added Ritter Studios sponsorship.

--- a/index.html
+++ b/index.html
@@ -417,6 +417,9 @@
       <a class="sponsor-list-item" href="http://www.seedcoworking.com/">
         <img src="/assets/img/logos/seed-coworking.svg" width="130" alt="Seed Coworking" />
       </a>
+      <a class="sponsor-list-item" href="http://ritterstudios.com/">
+        <img src="/assets/img/logos/ritter-studios.svg" width="220" alt="Ritter Studios" />
+      </a>
     </div>
   </div>
 </div>
