--- a/become-a-sponsor/index.html
+++ b/become-a-sponsor/index.html
@@ -59,8 +59,8 @@
     <link rel="stylesheet" href="https://cdn.snipcart.com/themes/2.0/base/snipcart.min.css" />
 
     <!-- Local CSS -->
-    <link rel="stylesheet"  href="/assets/css/twp.min.css" />
-    <link rel="stylesheet"  href="/assets/css/vendor.min.css" />
+    <link rel="stylesheet"  href="/assets/css/twp.min.css?v=7234789748932" />
+    <link rel="stylesheet"  href="/assets/css/vendor.min.css?v=7234789748932" />
 
   </head>
   <body>
