Pushing fixes to emails, fixes #13, fixes #16. Added Launchpad Incubation as a sponsor.

--- a/become-a-sponsor/index.html
+++ b/become-a-sponsor/index.html
@@ -298,7 +298,7 @@
           Questions? Need Help Deciding?
         </h5>
         <p>
-          Email us online at <a href="mailto:"></a> and a member
+          Email us online at <a href="mailto:twpmeetup@gmail.com">twpmeetup@gmail.com</a> and a member
           of our leadership team will help customize your sponsorship experience. We can’t wait to connect you to
           Toledo’s premier technology community!
         </p>
@@ -353,7 +353,7 @@
     </li>
     
     <li class="social-media-list-item">
-      <a class="social-media-list-icon" target="_blank" href="twpmeetup@gmail.com">
+      <a class="social-media-list-icon" target="_blank" href="mailto:twpmeetup@gmail.com">
         <i class="fa fa-envelope"></i>
       </a>
     </li>
