--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
       </li>
       
       <li class="social-media-list-item">
-        <a class="social-media-list-icon" target="_blank" href="twpmeetup@gmail.com">
+        <a class="social-media-list-icon" target="_blank" href="mailto:twpmeetup@gmail.com">
           <i class="fa fa-envelope"></i>
         </a>
       </li>
@@ -414,6 +414,9 @@
       <a class="sponsor-list-item" href="http://www.spokehq.com/">
         <img src="/assets/img/logos/spoke.svg" width="180" alt="Spoke HQ" />
       </a>
+      <a class="sponsor-list-item" href="http://www.utoledo.edu/incubator/">
+        <img src="/assets/img/logos/ut-launchpad-incubation.png" width="220" alt="UT Launchpad Incubation" />
+      </a>
       <a class="sponsor-list-item" href="http://www.seedcoworking.com/">
         <img src="/assets/img/logos/seed-coworking.svg" width="130" alt="Seed Coworking" />
       </a>
@@ -470,7 +473,7 @@
     </li>
     
     <li class="social-media-list-item">
-      <a class="social-media-list-icon" target="_blank" href="twpmeetup@gmail.com">
+      <a class="social-media-list-icon" target="_blank" href="mailto:twpmeetup@gmail.com">
         <i class="fa fa-envelope"></i>
       </a>
     </li>
