Added MaritzCX as a sponsor.

--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
     <link rel="stylesheet" href="https://cdn.snipcart.com/themes/2.0/base/snipcart.min.css" />
 
     <!-- Local CSS -->
-    <link rel="stylesheet"  href="/assets/css/twp.min.css?v=7234789748932" />
-    <link rel="stylesheet"  href="/assets/css/vendor.min.css?v=7234789748932" />
+    <link rel="stylesheet"  href="/assets/css/twp.min.css" />
+    <link rel="stylesheet"  href="/assets/css/vendor.min.css" />
 
   </head>
   <body>
@@ -411,6 +411,9 @@
     </p>
     <br />
     <div class="sponsor-list">
+      <a class="sponsor-list-item" href="https://www.maritzcx.com/">
+        <img src="/assets/img/logos/maritzcx.svg" width="180" alt="MaritzCX" />
+      </a>
       <a class="sponsor-list-item" href="http://www.spokehq.com/">
         <img src="/assets/img/logos/spoke.svg" width="180" alt="Spoke HQ" />
       </a>
