Updated event title.

--- a/intro-slides/index.html
+++ b/intro-slides/index.html
@@ -114,7 +114,7 @@
     <div class="carousel-item ">
   <div class="introductory-slide title-slide">
     <img src="/assets/img/logos/twp-symbol-w.svg" alt="Toledo Web Professionals" class="title-slide-logo" />
-    <h1 class="title-slide-title">The Cybersecurity Roadshow</h1>
+    <h1 class="title-slide-title">Exploring Craft CMS</h1>
     <ul class="title-slide-speakers">
       
         <li class="title-slide-speakers-item">
