--- a/intro-slides/index.html
+++ b/intro-slides/index.html
@@ -114,15 +114,15 @@
     <div class="carousel-item ">
   <div class="introductory-slide title-slide">
     <img src="/assets/img/logos/twp-symbol-w.svg" alt="Toledo Web Professionals" class="title-slide-logo" />
-    <h1 class="title-slide-title">Best Practices for API-Driven React Applications</h1>
+    <h1 class="title-slide-title">Atomic Design Systems</h1>
     <ul class="title-slide-speakers">
       
         <li class="title-slide-speakers-item">
           <strong class="title-slide-speaker-name">
-            Scott Radcliff
+            Alexander Christian
           </strong>
           <em class="title-slide-speaker-description">
-            Software Engineer at 10Pixels Software
+            Graphic Designer at Spoke
           </em>
         </li>
       
@@ -140,24 +140,24 @@
     <ul class="upcoming-events-slide-list">
         <li class="upcoming-events-slide-item">
           <time class="upcoming-events-time">
-            March 15, 2018
+            April 30, 2018
           </time>
           <h3 class="upcoming-events-title">
-            Freelance Frustration? Fix It With Our Pro Tips and Tricks Discussion!
+            	Hyperloop Info Session
           </h3>
           <p class="upcoming-events-more-details">
-            wptoledo.com
+            codecity.co
           </p>
         </li>
       <li class="upcoming-events-slide-item">
         <time class="upcoming-events-time">
-          April 2, 2018
+          Every Saturday
         </time>
         <h3 class="upcoming-events-title">
-          Data Science & Machine Learning
+          CoderDojo Programming Sessions
         </h3>
         <p class="upcoming-events-more-details">
-          codecity.co
+          coderdojotoledo.com
         </p>
       </li>
     </ul>
