--- a/intro-slides/index.html
+++ b/intro-slides/index.html
@@ -114,15 +114,15 @@
     <div class="carousel-item ">
   <div class="introductory-slide title-slide">
     <img src="/assets/img/logos/twp-symbol-w.svg" alt="Toledo Web Professionals" class="title-slide-logo" />
-    <h1 class="title-slide-title">Atomic Design Systems</h1>
+    <h1 class="title-slide-title">Simplifying Data Flow In React Applications</h1>
     <ul class="title-slide-speakers">
       
         <li class="title-slide-speakers-item">
           <strong class="title-slide-speaker-name">
-            Alexander Christian
+            Scott Sanzenbacher
           </strong>
           <em class="title-slide-speaker-description">
-            Graphic Designer at Spoke
+            Owner, Black Mutt Media, LLC.
           </em>
         </li>
       
@@ -140,13 +140,13 @@
     <ul class="upcoming-events-slide-list">
         <li class="upcoming-events-slide-item">
           <time class="upcoming-events-time">
-            April 30, 2018
+            June 20, 2018
           </time>
           <h3 class="upcoming-events-title">
-            	Hyperloop Info Session
+            How to Manage Everything
           </h3>
           <p class="upcoming-events-more-details">
-            codecity.co
+            wptoledo.com
           </p>
         </li>
       <li class="upcoming-events-slide-item">
