--- a/intro-slides/index.html
+++ b/intro-slides/index.html
@@ -114,15 +114,15 @@
     <div class="carousel-item ">
   <div class="introductory-slide title-slide">
     <img src="/assets/img/logos/twp-symbol-w.svg" alt="Toledo Web Professionals" class="title-slide-logo" />
-    <h1 class="title-slide-title">Simplifying Data Flow In React Applications</h1>
+    <h1 class="title-slide-title">The Great Gatsby: Building Fast Static Sites in React</h1>
     <ul class="title-slide-speakers">
       
         <li class="title-slide-speakers-item">
           <strong class="title-slide-speaker-name">
-            Scott Sanzenbacher
+            Kevin Marsh
           </strong>
           <em class="title-slide-speaker-description">
-            Owner, Black Mutt Media, LLC.
+            Developer at Kinship
           </em>
         </li>
       
@@ -138,17 +138,28 @@
   <div class="introductory-slide upcoming-events-slide">
     <img src="/assets/img/logos/twp-symbol-w.svg" alt="Toledo Web Professionals" class="slide-topper-logo" />
     <ul class="upcoming-events-slide-list">
-        <li class="upcoming-events-slide-item">
-          <time class="upcoming-events-time">
-            June 20, 2018
-          </time>
-          <h3 class="upcoming-events-title">
-            How to Manage Everything
-          </h3>
-          <p class="upcoming-events-more-details">
-            wptoledo.com
-          </p>
-        </li>
+      <li class="upcoming-events-slide-item">
+        <time class="upcoming-events-time">
+          October 18, 2018
+        </time>
+        <h3 class="upcoming-events-title">
+          Conceptualizing Accessibility with Jessica Setter
+        </h3>
+        <p class="upcoming-events-more-details">
+          wptoledo.com
+        </p>
+      </li>
+      <li class="upcoming-events-slide-item">
+        <time class="upcoming-events-time">
+          December 6, 2018
+        </time>
+        <h3 class="upcoming-events-title">
+          Tech Toledo Holiday Mixer
+        </h3>
+        <p class="upcoming-events-more-details">
+          http://techtoledo.com
+        </p>
+      </li>
       <li class="upcoming-events-slide-item">
         <time class="upcoming-events-time">
           Every Saturday
