Update meeting date

--- a/index.html
+++ b/index.html
@@ -169,9 +169,9 @@
           Building tech talent in Toledo is what brings us together. We feature discussions on topics ranging from UX and IA to
           programming and engineering.
         </p>
-        <h6 class="text-secondary">We Meet Every Second Wednesday</h6>
+        <h6 class="text-secondary">We Meet Every Month</h6>
         <p>
-          We facilitate at least one event per month, January through November, on the second Wednesday of the month
+          We facilitate at least one event per month, January through November, on the first week of the month
           at our local coworking space, <a target="_blank" href="http://www.seedcoworking.com/">Seed Coworking.</a>
         </p>
         <h6 class="text-secondary">Did We Mention it's Free?</h6>
