Update current talk name

--- a/intro-slides/index.html
+++ b/intro-slides/index.html
@@ -102,7 +102,7 @@
     <div class="carousel-item ">
   <div class="introductory-slide title-slide">
     <img src="/assets/img/logos/twp-symbol-w.svg" alt="Toledo Web Professionals" class="title-slide-logo" />
-    <h1 class="title-slide-title">The Great Gatsby: Building Fast Static Sites in React</h1>
+    <h1 class="title-slide-title">Cooking up better web applications with inspiration from the culinary world</h1>
     <ul class="title-slide-speakers">
       
         <li class="title-slide-speakers-item">
