--- a/intro-slides/index.html
+++ b/intro-slides/index.html
@@ -128,10 +128,10 @@
     <ul class="upcoming-events-slide-list">
       <li class="upcoming-events-slide-item">
         <time class="upcoming-events-time">
-          October 18, 2018
+          April, 2020
         </time>
         <h3 class="upcoming-events-title">
-          Conceptualizing Accessibility with Jessica Setter
+          Toledo Web Professionals Geek Dinner
         </h3>
         <p class="upcoming-events-more-details">
           wptoledo.com
@@ -139,24 +139,24 @@
       </li>
       <li class="upcoming-events-slide-item">
         <time class="upcoming-events-time">
-          December 6, 2018
+          April 2, 2020
         </time>
         <h3 class="upcoming-events-title">
-          Tech Toledo Holiday Mixer
+          Big Picture: Identifying open-data problems in Toledo
         </h3>
         <p class="upcoming-events-more-details">
-          http://techtoledo.com
+          https://www.meetup.com/Open-Toledo
         </p>
       </li>
       <li class="upcoming-events-slide-item">
         <time class="upcoming-events-time">
-          Every Saturday
+          March 19, 2020
         </time>
         <h3 class="upcoming-events-title">
-          CoderDojo Programming Sessions
+          Firebase Study Jam
         </h3>
         <p class="upcoming-events-more-details">
-          coderdojotoledo.com
+          https://www.meetup.com/GDGToledo
         </p>
       </li>
     </ul>
