--- a/intro-slides/index.html
+++ b/intro-slides/index.html
@@ -107,10 +107,10 @@
       
         <li class="title-slide-speakers-item">
           <strong class="title-slide-speaker-name">
-            Kevin Marsh
+            Ryan Lanciaux
           </strong>
           <em class="title-slide-speaker-description">
-            Developer at Kinship
+            Developer
           </em>
         </li>
       
