--- a/intro-slides/index.html
+++ b/intro-slides/index.html
@@ -134,7 +134,7 @@
           Toledo Web Professionals Geek Dinner
         </h3>
         <p class="upcoming-events-more-details">
-          wptoledo.com
+          toledowebprofessionals.com
         </p>
       </li>
       <li class="upcoming-events-slide-item">
