Update meeting location
No longer using Seed Coworking due to the COVID-19 pandemic.

--- a/index.html
+++ b/index.html
@@ -171,8 +171,8 @@
         </p>
         <h6 class="text-secondary">We Meet Every Month</h6>
         <p>
-          We facilitate at least one event per month, January through November, on the first week of the month
-          at our local coworking space, <a target="_blank" href="http://www.seedcoworking.com/">Seed Coworking.</a>
+          We facilitate at least one event per month via Zoom, due to the COVID-19 pandemic.
+          We may return to our local coworking space once it is safe to do so, <a target="_blank" href="http://www.seedcoworking.com/">Seed Coworking.</a>
         </p>
         <h6 class="text-secondary">Did We Mention it's Free?</h6>
         <p>
